// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare function foo(): void;
module.exports = foo();

=====================================output=====================================
// @flow

declare function foo(): void;
module.exports = foo();

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare function foo(): void;
export default foo();

=====================================output=====================================
// @flow

declare function foo(): void;
export default foo();

================================================================================
`;
